Revert "fix: ProfileInfo css on mobile"
This reverts commit 7c831182e5728279604cfdd986c3598a5d30c546.

--- a/src/components/ProfileInfo/ProfileInfo.less
+++ b/src/components/ProfileInfo/ProfileInfo.less
@@ -16,10 +16,7 @@
         width: 15rem;
     }
 
-    @media screen and (max-width: 800px) {
-        display: flex;
-        flex-direction: column;
-
+    @media screen and (max-width: 800px){
         .profile-bio-groups-container{
             width: 100%;
 
