--- a/src/pages/Group/Group.less
+++ b/src/pages/Group/Group.less
@@ -27,9 +27,6 @@
     }
 
     .group-page-container {
-        @media (min-width: 800px) {
-            margin-top: 1.5rem;
-        }
 
         display: flex;
         flex-direction: column;
